--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 			<version>2.2.3</version>
 		</dependency>
 		<dependency>
+			<groupId>stackexchange-java-sdk</groupId>
+			<artifactId>stackexchange-java-sdk</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/stackexchange-java-sdk.jar</systemPath>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.12</version>
