--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
     <servlet-mapping>
         <servlet-name>DispatcherServlet</servlet-name>
-        <url-pattern>*.htm</url-pattern>
+        <url-pattern>*.action</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
